--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* GLOBAL */
+
 * {
     box-sizing: border-box;
 }
@@ -5,8 +7,10 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
-
+    font-family: 'Open Sans', "Arail",  sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    color: #444;
 }
 
 /* container */
@@ -20,4 +24,5 @@ body {
     margin-right: auto;
 
 }
+
 
